@@ -9,68 +9,69 @@ import jakarta.validation.Valid;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("${api.endpoint.base-url}/wizards")
 public class WizardController {
 
     private final WizardService wizardService;
-    private final WizardToWizardDtoConverter wizardToWizardDtoConverter;
 
-    private final WizardDtoToWizardConverter wizardDtoToWizardConverter;
+    private final WizardDtoToWizardConverter wizardDtoToWizardConverter; // Convert WizardDto to Wizard.
 
-    public WizardController(WizardService wizardService, WizardToWizardDtoConverter wizardToWizardDtoConverter, WizardDtoToWizardConverter wizardDtoToWizardConverter) {
+    private final WizardToWizardDtoConverter wizardToWizardDtoConverter; // Convert Wizard to WizardDto.
+
+
+    public WizardController(WizardService wizardService, WizardDtoToWizardConverter wizardDtoToWizardConverter, WizardToWizardDtoConverter wizardToWizardDtoConverter) {
         this.wizardService = wizardService;
-        this.wizardToWizardDtoConverter = wizardToWizardDtoConverter;
         this.wizardDtoToWizardConverter = wizardDtoToWizardConverter;
+        this.wizardToWizardDtoConverter = wizardToWizardDtoConverter;
     }
 
     @GetMapping
     public Result findAllWizards() {
-        List<Wizard> wizards = this.wizardService.findAllWizards();
+        List<Wizard> foundWizards = this.wizardService.findAll();
 
-        List<WizardDto> wizardDtos = wizards.stream().map(wizardToWizardDtoConverter::convert).toList();
-
+        // Convert foundWizards to a list of WizardDtos.
+        List<WizardDto> wizardDtos = foundWizards.stream()
+                .map(this.wizardToWizardDtoConverter::convert)
+                .collect(Collectors.toList());
         return new Result(true, StatusCode.SUCCESS, "Find All Success", wizardDtos);
     }
 
-    @GetMapping("/{id}")
-    public Result findWizardById(@PathVariable Integer id) {
-        Wizard wizard = this.wizardService.findWizardById(id);
-        WizardDto wizardDto = this.wizardToWizardDtoConverter.convert(wizard);
-
+    @GetMapping("/{wizardId}")
+    public Result findWizardById(@PathVariable Integer wizardId) {
+        Wizard foundWizard = this.wizardService.findById(wizardId);
+        WizardDto wizardDto = this.wizardToWizardDtoConverter.convert(foundWizard);
         return new Result(true, StatusCode.SUCCESS, "Find One Success", wizardDto);
     }
 
     @PostMapping
     public Result addWizard(@Valid @RequestBody WizardDto wizardDto) {
-        Wizard wizard = this.wizardDtoToWizardConverter.convert(wizardDto);
-        Wizard newWizard = this.wizardService.addWizard(wizard);
-        WizardDto newWizardDto = this.wizardToWizardDtoConverter.convert(newWizard);
-
-        return new Result(true, StatusCode.SUCCESS, "Add Success", newWizardDto);
+        Wizard newWizard = this.wizardDtoToWizardConverter.convert(wizardDto);
+        Wizard savedWizard = this.wizardService.save(newWizard);
+        WizardDto savedWizardDto = this.wizardToWizardDtoConverter.convert(savedWizard);
+        return new Result(true, StatusCode.SUCCESS, "Add Success", savedWizardDto);
     }
 
     @PutMapping("/{wizardId}")
-    public Result updateWizardById(@PathVariable Integer wizardId, @Valid @RequestBody WizardDto wizardDto) {
+    public Result updateWizard(@PathVariable Integer wizardId, @Valid @RequestBody WizardDto wizardDto) {
         Wizard update = this.wizardDtoToWizardConverter.convert(wizardDto);
-        Wizard newWizard = this.wizardService.updateWizardById(wizardId, update);
-        WizardDto newWizardDto = this.wizardToWizardDtoConverter.convert(newWizard);
-
-        return new Result(true, StatusCode.SUCCESS, "Update Success", newWizardDto);
+        Wizard updatedWizard = this.wizardService.update(wizardId, update);
+        WizardDto updatedWizardDto = this.wizardToWizardDtoConverter.convert(updatedWizard);
+        return new Result(true, StatusCode.SUCCESS, "Update Success", updatedWizardDto);
     }
 
     @DeleteMapping("/{wizardId}")
-    public Result deleteWizardById(@PathVariable Integer wizardId) {
-        this.wizardService.deleteWizardById(wizardId);
-
+    public Result deleteWizard(@PathVariable Integer wizardId) {
+        this.wizardService.delete(wizardId);
         return new Result(true, StatusCode.SUCCESS, "Delete Success");
     }
+
 
     @PutMapping("/{wizardId}/artifacts/{artifactId}")
     public Result assignArtifact(@PathVariable Integer wizardId, @PathVariable String artifactId) {
         this.wizardService.assignArtifact(wizardId, artifactId);
-
         return new Result(true, StatusCode.SUCCESS, "Artifact Assignment Success");
     }
 
